# deeplearning_labs

./: Lab01.ipynb  Lab02.ipynb  README.md  demo.ipynb  lab3.md  quant.cc
Lab01/: Lab01.ipynb
Lab02/: Lab02.ipynb
Lab03/: Lab03.ipynb
Lab03/esp32-projects/micro_speech/: .gitignore  README.md
Lab03/esp32-projects/micro_speech/main/: CMakeLists.txt  command_responder.cc  wifi_ap.c  wifi_ap.h
Lab03/esp32-projects/person_detection/: image_server.py  sdkconfig
Lab03/esp32-projects/person_detection/main/: CMakeLists.txt  detection_responder.cc  flower_main_functions.cc  flower_main_functions.h  flower_model.cc  flower_model.h  flower_model_settings.cc  flower_model_settings.h  main_functions.cc
Lab03/esp32-projects/person_detection/main/esp/: app_camera_esp.h  image_provider.cc  image_provider_stub.cc  image_provider_stub_random.cc  main.cc
Lab03/esp32-projects/person_detection/main/mnist/: mnist_detection_responder.cc  mnist_detection_responder.h  mnist_model_big_main_functions.cc  mnist_model_big_main_functions.h  mnist_model_big_settings.cc  mnist_model_big_settings.h  mnist_model_quant_big.cc  mnist_model_quant_big.h  mnist_tcp_client.c  mnist_tcp_client.h
Lab03/esp32-projects/rock_paper_scissors/: image_server.py  image_test_client.py  sdkconfig  sdkconfig.old
Lab03/esp32-projects/rock_paper_scissors/main/: CMakeLists.txt  detection_responder.cc  detection_responder.h  image_tcp_client.c  image_tcp_client.h  main_functions.cc  model_settings.cc  model_settings.h  rps_quant.cc  rps_quant.h
Lab03/pretrained_models/: model_rps.h5
(+24 files in other folders)
